# neutoy

./: nginx.conf  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml
deploy/: Dockerfile  docker-compose.yml  nginx.conf  run_deploy.yaml
html/: index-all.html  index-bg.html  index-ui.html  index.html
html/css/: style-old.css  style-ui.css  style.css
html/js/: bubbles.js  gyro.js  interact.js  lib.js  matrix.js  record.js  script.js  speaker.js  submit.js  triggers.js  voice.js
toyserver/: __main__.py  models.py  server.py
toyserver/llms/: anthropic.py  whisper.py
toyserver/services/: anthropic.py  gspeach.py  openai.py  whisper.py
