[project]
name = "toyserver"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vadim Suharnikov", email = "vsuahrnikov@gmail.com"},
]
dependencies = [
    "anthropic>=0.34.1",
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "replicate>=0.32.0",
    "python-multipart>=0.0.9",
    "google-cloud-speech>=2.27.0",
    "google-cloud-texttospeech>=2.17.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.6.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"


[tool.ruff.lint]
preview = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "D",
    "E",
    "W",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-annotations
    "ANN",
    # flake8-bandit
    "S",
    # flake8-commas
    "COM",
    # flake8-datetimez
    "DTZ",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging-format
    "G",
    # implicit-namespace-package
    "INP001",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-pyi
    "PYI",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-self
    "SLF",
    # flake8-simplify
    "SIM",
    # flake8-tidy-imports
    "TID",
    # flake8-type-checking
    "TCH",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # Pylint
    "PL",
    # Ruff-specific rules
    "RUF",
]

ignore = [
    # https://github.com/charliermarsh/ruff/discussions/4542
    # Missing type annotation for {name} in method
    "ANN101",
    "ANN102",
    # Package dosctring check
    "D104",
    # Checks for string literals that are explicitly concatenated (using `+` operator)
    'ISC003',
    # Private member accessed
    'SLF001',
    # First argument of a method should be named `self`
    "N805",
    # It's not work properly for pydantic models
    # Move standard library import `datetime` into a type-checking block
    "TCH001",
    "TCH002",
    "TCH003",
    # Ternary operator make code less readable
    # Use ternary operator {} instead of `if`-`else`-
    "SIM108",
    # Use a single `if` statement instead of nested `if` statementsRuff
    "SIM102",
]



[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "single"
